# advance-of-code

./: .gitignore  Cargo.toml  README.md
crates/y2023/: Cargo.toml
crates/y2023/src/day-3/: main.rs
crates/y2023/src/day-4/: main.rs
crates/y2024/: Cargo.toml
crates/y2024/src/day-1/: main.rs
crates/y2024/src/day-2/: main.rs
crates/y2024/src/day-3/: main.rs
python/2024/1/: input.txt  main.py
rust/: Cargo.toml
rust/crates/y2023/: Cargo.toml
rust/crates/y2023/src/day-1/: main.rs
rust/crates/y2023/src/day-2/: main.rs
rust/crates/y2024/: Cargo.toml
rust/crates/y2024/src/day-2/: main.rs
rust/crates/y2024/src/day-3/: main.rs
rust/crates/y2024/src/day-4/: main.rs
