[package]
name = "y2024"
version = "0.1.0"
edition.workspace = true

[dependencies]
regex = "1.11.1"

[[bin]]
name = "day1"
path = "./src/day-1/main.rs"

[[bin]]
name = "day2"
path = "./src/day-2/main.rs"

[[bin]]
name = "day3"
path = "./src/day-3/main.rs"

[[bin]]
name = "day4"
path = "./src/day-4/main.rs"
